compiler/src/test/resources/amyc/typer/passing/FunctionInReturnType.amy
module highOrderFunction

    fn test(): () => String = {
        error("")
    }

end highOrderFunction