compiler/src/test/resources/amyc/typer/failing/LetError2.amy
module LetError2
  fn test(): Int = {
    val x: Int = false;
    2
  }
end LetError2
